fix: fix tests